Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectBooleanField.quorum
class Main
    Object o        
    action Main
        o = cast(Object, true)
        output "passed"
    end
end