Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberBoolean.quorum
class main
    action Main
        number num
        num = cast(number, true)
    end
end